infra/services-replicated/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: ghcr.io/sofushn/ruc-workshop-dds-project:api-latest
        ports:
        - containerPort: 8080
